fix: remove gap

--- a/src/pages/profile/Profile.module.css
+++ b/src/pages/profile/Profile.module.css
@@ -53,7 +53,6 @@
   background-color: #fff;
   overflow: hidden;
   display: flex;
-  gap: 2rem;
   justify-content: center;
   border: 1px solid #ededed;
   width: fit-content;
